--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,7 @@ sonar.projectVersion=1.0
 sonar.sources=.
 
 sonar.branch.name=branch-aaa
+sonar.branch.target=master
 
  
 # Encoding of the source code. Default is default system encoding
